anachronism and continuity

--- a/_posts/2019-09-06-i-am-a-fish.markdown
+++ b/_posts/2019-09-06-i-am-a-fish.markdown
@@ -44,11 +44,11 @@ Most people agree that goldfish are an example of fish, and coelacanths are also
 Note 1: The leftmost group, including just the goldfish, is called Actinopterygii (“ACT-in-OP-ter-EE-jee-ai”), or ray-finned fish.  The branch including humans and coelacanths is called Sarcopterygii (“sar-COP-ter-EE-jee-ai”), or lobe-finned fish.  Even above this is another level of creatures people commonly call fish--the sharks and rays, or Chondrichthyes (“cond-RIK-theez”), cartilaginous fish.  Goldfish are more closely related to us than they are to sharks.
 
 Note 2: Other polyphyletic groups!
-- “Pachyderms” (meaning thick skin) was a term that basically meant “large gray hairless animals from Africa,” and included rhinos, hippos, and elephants until we realized that elephants are Afrotherians (a clade including dugongs and manatees, aardvarks, hyraxes, tenrecs, elephant shrews, and other small, non-gray animals), hippos are Artiodactyls (a clade including deer, sheep, pigs, whales, and others), and rhinos are Perissodactyls (a clade including horses and tapirs).  A clade including rhinos, hippos, and elephants would necessarily have to include all the animals mentioned here, PLUS rodents and primates, which are between hippos/rhinos and elephants on the mammal family tree.  So, instead of insisting that we are all pachyderms, scientists decided the term was basically useless and stopped using it.
+- “Pachyderms” (meaning thick skin) was a term that basically meant “large gray hairless animals from Africa,” and included rhinos, hippos, and elephants until we realized that elephants are afrotherians (a clade including dugongs and manatees, aardvarks, hyraxes, tenrecs, elephant shrews, and other small, non-gray animals), hippos are artiodactyls (a clade including deer, sheep, pigs, whales, and others), and rhinos are perissodactyls (a clade including horses and tapirs).  A clade including rhinos, hippos, and elephants would necessarily have to include all the animals mentioned here, PLUS rodents and primates, which are between hippos/rhinos and elephants on the mammal family tree.  So, instead of insisting that we are all pachyderms, scientists decided the term was basically useless and stopped using it.
 
 - “Reptiles” used to include lizards, snakes, tuatara, and crocodiles, but exclude birds.  But birds and crocodiles are more closely related to each other (they’re both archosaurs) than either is to lizards, snakes, and tuatara (lepidosaurs), so birds must be a subset of reptiles.
 
-- “Dinosaurs” used to include Triceratops and Tyrannosaurus and Brontosaurus, but not modern birds.  Tyrannosaurus is (much) more closely related to modern birds than it is to Triceratops, so birds must be a subset of dinosaurs.  (If I was a bird writing this blog post, the title might be “I Am A Dinosaur (And So Are You)”.)
+- “Dinosaurs” used to include *Triceratops* and *Tyrannosaurus* and *Brontosaurus*, but not modern birds.  *Tyrannosaurus* is much more closely related to modern birds than it is to *Triceratops*, so birds must be a subset of dinosaurs.  (If I were a bird writing this blog post, the title might be “I Am A Dinosaur (And So Are You)”.)
 
 - “Tree,” believe it or not, is also a polyphyletic group.  An apple tree is more closely related to grass (they’re both angiosperms) than is is to a pine tree (a gymnosperm).  However, “tree” _does_ have a rigorous scientific definition as a botanical "habit".  These are the criteria:
 	- A vascular plant
