--- a/_posts/2020-05-23-mayart.markdown
+++ b/_posts/2020-05-23-mayart.markdown
@@ -7,44 +7,56 @@ categories: blog post
 
 I haven't been drawing as much this past month, but here's what I did do!
 
-#### Linhenykus
+#### *Linhenykus*
 ![linhenykus](/assets/linhenykus.png)
 
-Linhenykus was an alvarezsaurid dinosaur (the little running insectivores with a single large clawed finger per hand) from Late Cretaceous China.  The skull is so bird-shaped that in a blue jay's clothes it just looks identical to a real jay.  Oh well.  I was thinking about how many modern animals' best-known feature has something to do with their integument: tiger and lion skeletons look nearly identical, but a child would never mix them up.  So too, maybe one would've been able to tell Linhenykus and Mononykus apart by their distinctive plumage.
+*Linhenykus* was an alvarezsaurid dinosaur (the little running insectivores with a single large clawed finger per hand) from Late Cretaceous China.  The skull is so bird-shaped that in a blue jay's clothes it just looks identical to a real jay.  Oh well.  I was thinking about how many modern animals' best-known feature has something to do with their integument: tiger and lion skeletons look nearly identical, but a child would never mix them up.  So too, maybe one would've been able to tell *Linhenykus* and *Mononykus* apart by their distinctive plumage.
 
-#### Allosaurus hatchlings
+#### *Allosaurus* hatchlings
 ![allo-hatchlings](/assets/allo-hatchlings.png)
 
-Allosaurus was a very well-known theropod dinosaur from Late Jurassic North America.  Here, some speculatively fluffy hatchlings beg mom for food.  Similarly to what is known about the ontogeny of Tyrannosaurus, Allosaurus juveniles were more leggy than the adults, indicating that they may have filled a different ecological niche so as not to compete.  Since drawing this, I've been informed that scale impressions are known from Allosaurus juveniles, but that material is from older individuals than I have pictured here.  So I'll admit that this drawing is improbable, but not impossible!
+*Allosaurus* was a very well-known theropod dinosaur from Late Jurassic North America.  Here, some speculatively fluffy hatchlings beg mom for food.  Similarlu to what is known about the ontogeny of *Tyrannosaurus*, *Allosaurus* juveniles were more leggy than the adults, indicating that they may have filled a different ecological niche so as not to compete.  Since drawing this, I've been informed that scale impressions are known from *Allosaurus* juveniles, but that material is from older individuals than I have pictured here.  So I'll admit that this drawing is improbable, but not impossible!
 
-#### Microraptor
+#### *Microraptor*
 ![microraptor](/assets/microraptor.png)
 
-Here's a quick painting I did of the famous Microraptor, the four-winged crow dinosaur.  From [melanosome studies](https://obscuredinosaurfacts.com/blog/post/2019/09/14/what-color-were-dinosaurs.html), we know that Microraptor was iridescent black like this.
+Here's a quick painting I did of the famous *Microraptor*, the four-winged crow dinosaur.  From [melanosome studies](https://obscuredinosaurfacts.com/blog/post/2019/09/14/what-color-were-dinosaurs.html), we know that *Microraptor* was iridescent black like this.
 
-#### Spinosaurus 2020
+#### *Spinosaurus* 2020
 ![spinosaurus](/assets/spinosaurus.png)
 
-As many of you probably know, a new Spinosaurus tail specimen was described earlier this year that made waves in the paleontology and paleoart communities.  No tail material was previously known, so artists defaulted to giving it a generic theropod tail, round in cross-section and relatively stiff.  But in actuality, Spinosaurus's tail was laterally compressed, with long neural spines and chevrons for better propulsion in water, like the tail of a newt or crocodile.  While lots of evidence already pointed to Spinosaurus spending a lot of time in water (the croc-like face with pressure-sensitive pits in the snout, webbed footprints, dense bones, legs further back on the body like a loon, fish stomach contents, etc) this swimmy tail solidifies our understanding of how Spinosaurus lived.  I've given my Spinosaurus coloration inspired by a modern-day sail-backed creature, the marlin.
+As many of you probably know, a new *Spinosaurus* tail specimen was described earlier this year that made waves in the paleontology and paleoart communities.  No tail material was previously known, so artists defaulted to giving it a generic theropod tail, round in cross-section and relatively stiff.  But in actuality, *Spinosaurus*'s tail was laterally compressed, with long neural spines and chevrons for better propulsion in water, like the tail of a newt or crocodile.  While lots of evidence already pointed to *Spinosaurus* spending a lot of time in water (the croc-like face with pressure-sensitive pits in the snout, webbed footprints, dense bones, legs further back on the body like a loon, fish stomach contents, etc) this swimmy tail solidifies our understanding of how *Spinosaurus* lived.  I've given my *Spinosaurus* coloration inspired by a modern-day sail-backed creature, the marlin.
 
-#### Kaprosuchus
+#### *Kaprosuchus*
 ![kaprosuchus](/assets/kaprosuchus.png)
 
-Kaprosuchus ("Boar Croc") was a mahajangasuchid crocodyliform from Late Cretaceous Niger, described in 2009 alongside Anatosuchus ("Duck Croc") and Laganosuchus ("Pancake Croc").  It had huge, tusklike teeth that stuck out of its mouth when closed, like a boar, and was a fully terrestrial predator.
+*Kaprosuchus* ("Boar Croc") was a mahajangasuchid crocodyliform from Late Cretaceous Niger, described in 2009 alongside *Anatosuchus* ("Duck Croc") and *Laganosuchus* ("Pancake Croc").  It had huge, tusklike teeth that stuck out of its mouth when closed, like a boar, and was a fully terrestrial predator.
 
-The coloration here is inspired by Seregios, from the Monster Hunter franchise.  I was wanting to do another portrait like my [Aucasaurus x Tigrex](https://obscuredinosaurfacts.com/blog/post/2020/04/18/aprilart.html) one, but the head shape and ornamentation of Seregios ended up being too unlike that of any real animal that this picture doesn't really look reminiscent of Seregios at all.  I do like how Seregios's coloring mapped onto Kaprosuchus's face though.  I considered doing Monoblos x Styracosaurus, but then I realized Monoblos is literally just a Styracosaurus head pasted onto a dragon body, and Monoblos isn't even very interestingly colored.
+The coloration here is inspired by Seregios, from the Monster Hunter franchise.  I was wanting to do another portrait like my [*Aucasaurus* x Tigrex](https://obscuredinosaurfacts.com/blog/post/2020/04/18/aprilart.html) one, but the head shape and ornamentation of Seregios ended up being too unlike that of any real animal that this picture doesn't really look reminiscent of Seregios at all.  I do like how Seregios's coloring mapped onto Kaprosuchus's face though.  I considered doing Monoblos x *Styracosaurus*, but then I realized Monoblos is literally just a *Styracosaurus* head pasted onto a dragon body, and Monoblos isn't even very interestingly colored.
 
-#### Zhenyuanlong
+#### *Zhenyuanlong*
 ![zhenyuanlong](/assets/zhenyuanlong.png)
 
-Zhenyuanlong was a dromaeosaur from Early Cretaceous China, known for having large, well-developed wings despite not being able to fly.  Here, two male Zhenyuanlong have a confrontation, displaying their wings and tails to make themselves look larger.  The coloration is inspired by kingfishers.
+*Zhenyuanlong* was a dromaeosaur from Early Cretaceous China, known for having large, well-developed wings despite not being able to fly.  Here, two male *Zhenyuanlong* have a confrontation, displaying their wings and tails to make themselves look larger.  The coloration is inspired by kingfishers.
 
-#### Acheroraptor
+#### *Acheroraptor*
 ![acheroraptor](/assets/achero.png)
 
-Acheroraptor was a velociraptorine dromaeosaur from Latest Cretaceous Hell Creek, North America.  It was a turkey-sized creature that lived alongside such famous dinosaurs as Triceratops and Tyrannosaurus.  Here, two female Acheroraptor go for a peaceful stroll.  The patterning is inspired by ukiyo-e depictions of birds, but it ended up being a little more subtle than I'd intended.
+*Acheroraptor* was a velociraptorine dromaeosaur from Latest Cretaceous Hell Creek, North America.  It was a turkey-sized creature that lived alongside such famous dinosaurs as *Triceratops* and *Tyrannosaurus*.  Here, two female *Acheroraptor* go for a peaceful stroll.  The patterning is inspired by ukiyo-e depictions of birds, but it ended up being a little more subtle than I'd intended.
 
-#### Anurognathus
+#### *Anurognathus*
 ![anurognathus](/assets/anuro.png)
 
-Anurognathus was a sparrow-sized pterosaur from Late Jurassic Germany.  It was unusual among pterosaurs for being (a) so tiny, and (b) for having an extremely short-snouted face with pointy teeth for catching small insects on the wing.  It was the pterosaur answer to bats!  Here, a pair of Anurognathus are just waking up in the twilight to start their night of hunting.
+*Anurognathus* was a sparrow-sized pterosaur from Late Jurassic Germany.  It was unusual among pterosaurs for being (a) so tiny, and (b) for having an extremely short-snouted face with pointy teeth for catching small insects on the wing.  It was the pterosaur answer to bats!  Here, a pair of Anurognathus are just waking up in the twilight to start their night of hunting.
+
+#### *Torosaurus*
+![toro](/assets/toro.png)
+
+*Torosaurus* was a close relative of *Triceratops* that lived alongside it, in Latest Cretaceous North America.  It had a record-breaking skull--almost 3 meters long, the largest of any land animal.  I really like how X-shaped his face is from the front.
+
+*Triceratops* had really strange skin, with large scales surrounding even larger scales with nipple-like protrusions.  I've given *Torosaurus* the same skin, but I'm not sure if we know anything about its integument.
+
+#### *Trinisaura*
+![trini](/assets/trini.png)
+
+Another ukiyo-e inspired painting, this time of the Late Cretaceous Antarctic ornithopod, *Trinisaura*.  Being a polar dinosaur, it would've experienced months of uninterrupted darkness.
