--- a/_posts/2019-09-03-glossary.markdown
+++ b/_posts/2019-09-03-glossary.markdown
@@ -5,34 +5,36 @@ date:   2019-09-03 22:40:08 -0700
 categories: blog post
 ---
 ### Main dinosaur groups
-**Sauropods** (meaning “lizard foot”) are the long-necked dinosaurs.  They come in two main flavors: the gigantic vertical-necked Titanosaurs (including Brachiosaurus, Patagotitan, and Alamosaurus) and the horizontal-necked, whip-tailed Diplodocoids (including Diplodocus, Brontosaurus, and Amargasaurus).  Sauropods and their basal relatives, sauropodomorphs, have been around since the late Triassic.
+**Sauropods** (meaning “reptile foot”) are the long-necked dinosaurs.  They come in two main flavors: the gigantic vertical-necked titanosaurs (including *Brachiosaurus*, *Patagotitan*, and *Alamosaurus*) and the horizontal-necked, whip-tailed diplodocoids (including *Diplodocus*, *Brontosaurus*, and *Amargasaurus*).  Sauropods and their basal relatives, sauropodomorphs, have been around since the late Triassic (about 231 million years ago).
 
-**Theropods** (meaning “beast foot”) are the bipedal, carnivorous dinosaurs.  These include such fan favorites as Tyrannosaurus, Allosaurus, Spinosaurus, Carnotaurus, Velociraptor, and all modern birds.  Theropods have been around since the late Triassic.
+**Theropods** (meaning “beast foot”) are the bipedal, carnivorous dinosaurs.  These include such fan favorites as *Tyrannosaurus*, *Allosaurus*, *Spinosaurus*, *Carnotaurus*, *Velociraptor*, and all modern birds.  Theropods have also been around since the late Triassic.
 
-**Ceratopsians** (meaning “horned face”) are the horned, frilled dinosaurs.  (Exactly what it says on the tin for once!)  These include Triceratops, Protoceratops, Psittacosaurus, and others.  Ceratopsians didn’t arise until the late Jurassic, and only hit their stride in the late Cretaceous.
+**Ceratopsians** (meaning “horned face”) are the horned, frilled dinosaurs.  (Exactly what it says on the tin for once!)  These include *Triceratops*, *Protoceratops*, *Psittacosaurus*, and others.  Ceratopsians didn’t arise until the late Jurassic, about 161 million years ago, and only hit their stride in the late Cretaceous, about 100 million years ago.
 
-**Ornithopods** (meaning “bird foot”) are the duck-billed dinosaurs.  These include Iguanodon, Edmontosaurus, Parasaurolophus, Maiasaura, and others.  Ornithopods, like Ceratopsians, didn’t arise until the late Jurassic and didn’t hit their stride until the late Cretaceous.
+**Ornithopods** (meaning “bird foot”) are the "duck-billed" dinosaurs.  These include *Iguanodon*, *Edmontosaurus*, *Parasaurolophus*, *Maiasaura*, and others.  Ornithopods, like ceratopsians, didn’t arise until the late Jurassic and didn’t hit their stride until the late Cretaceous.
 
-**Thyreophorans** (meaning “shield bearer”) are the armored dinosaurs.  They come in two main flavors: the plate-backed Stegosaurs (including Stegosaurus, Kentrosaurus, and Gigantspinosaurus) and the heavily-armored Ankylosaurs (including Ankylosaurus, Nodosaurus, and Euoplocephalus).
+**Thyreophorans** (meaning “shield bearer”) are the armored dinosaurs.  They come in two main flavors: the plate-backed stegosaurs (including *Stegosaurus*, *Kentrosaurus*, and *Gigantspinosaurus*), which were numerous in the Late Jurassic, and the heavily-armored ankylosaurs (including *Ankylosaurus*, *Nodosaurus*, and *Euoplocephalus*), which took over as the stegosaurs declined and lasted until the end of the Cretaceous.
 
 ### Other important clades
-**Amniotes** are the clade of tetrapods that lay amniotic eggs, including mammals and reptiles.  The eggshells of amniotic eggs aren’t permeable to water, which means the eggs can be laid on land without having to worry about them drying out.  This was a huge deal during the Carboniferous Rainforest Collapse when the climate all over the planet got a lot drier, and allowed mammals’ and reptiles’ ancestors to get a competitive edge over the amphibians.
+**Tetrapods** are the group of vertebrates with four limbs, including amphibians, mammals, and reptiles (which includes birds).  Even though some tetrapods later lost their limbs, like snakes and whales, they are still considered tetrapods.
 
-**Synapsids** (meaning “together face”) are the clade of animals including mammals and their ancestors, all the way back to when they diverged from the ancestors of reptiles.  They can be distinguished by the single **temporal fenestra** (hole) on either side of the skull behind the eye socket.  They are a subgroup of Amniotes.
+**Amniotes** are the clade of tetrapods that lay amniotic eggs, including mammals and reptiles.  The eggshells of amniotic eggs aren’t permeable to water, which means the eggs can be laid on land without having to worry about them drying out (and if they are laid in the water, they'll drown).  This was a huge deal during the **Carboniferous Rainforest Collapse** when the climate all over the planet got a lot drier, and allowed mammals’ and reptiles’ ancestors to get a competitive edge over the amphibians.
 
-**Sauropsids** (meaning “lizard face”) are the clade of animals including reptiles and their ancestors, all the way back to when they diverged from the ancestors of mammals.  They have either two temporal fenestrae behind each eye (**diapsids**), or none (**anapsids**).  They are a subgroup of Amniotes.
+**Synapsids** (meaning “together face”) are the clade of animals including mammals and their ancestors, all the way back to when they diverged from the ancestors of reptiles.  They can be distinguished by the single **temporal fenestra** (hole) on either side of the skull behind the eye socket.  They are a subgroup of **amniotes**.
 
-**Archosaurs** (meaning “leader lizard”) are the clade of reptiles including crocodylians, birds, dinosaurs, pterosaurs, and phytosaurs.  It is the sister group to Lepidosaurs, and a subgroup of Sauropsids.  Yes, crocodiles and birds are more closely related to each other than either one is to lizards.
+**Sauropsids** (meaning “reptile face”) are the clade of animals including reptiles and their ancestors, all the way back to when they diverged from the ancestors of mammals.  They have either two temporal fenestrae behind each eye (**diapsids**), or none (**anapsids**).  They are a subgroup of **amniotes**.
 
-**Lepidosaurs** (meaning “scale lizard”) are the clade of reptiles including lizards, snakes, and tuatara.  It is the sister group to Archosaurs, and a subgroup of Sauropsids.
+**Archosaurs** (meaning “leader reptile") are the clade of reptiles including crocodylians, birds, dinosaurs, pterosaurs, and phytosaurs.  It is the sister group to Lepidosaurs, and a subgroup of Sauropsids.  Yes, crocodiles and birds are more closely related to each other than either one is to lizards.
 
-**Pterosaurs** (meaning "wing lizard") are a group of flying archosaurs closely related to dinosaurs, but are not dinosaurs.  They come in two main flavors: "Rhamphorhynchids" and Pterodactyloids.  "Rhamphorhynchids" (meaning "beak snout") are a paraphyletic group of more basal pterosaurs, which usually had long tails and toothy jaws.  Pterodactyloids (meaning winged finger-ish) are a monophyletic group of more advanced pterosaurs, which usually had reduced tails, keratinous beaks, and extreme headgear.  A notable subgroup of Pterodactyloids are the Azhdarchids, the late Cretaceous giant pterosaurs that were the largest creatures ever to fly.
+**Lepidosaurs** (meaning “scale reptile”) are the clade of reptiles including lizards, snakes, and tuatara.  It is the sister group to **archosaurs**, and a subgroup of **sauropsids**.
 
-**Pelycosaurs** (meaning “basin lizard”) are a paraphyletic group of very basal synapsids that lived from the late Carboniferous to the middle Permian.  They included the apex predators of their time, such as the famous Dimetrodon, as well as large herbivores such as Edaphosaurus.  Many had huge sails on their backs for some still-unknown reason.
+**Pterosaurs** (meaning "wing reptile") are a group of flying **archosaurs** closely related to dinosaurs, but are not dinosaurs.  They come in two main flavors: "rhamphorhynchoids" and pterodactyloids.  "Rhamphorhynchoids" (meaning "beak snout") are a **paraphyletic** group of more basal pterosaurs, which usually had long tails and toothy jaws.  Pterodactyloids (meaning "winged finger") are a monophyletic group of more advanced pterosaurs, which usually had reduced tails, keratinous beaks, and extreme headgear.  A notable subgroup of pterodactyloids are the azhdarchids, the late Cretaceous giant pterosaurs that were the largest creatures ever to fly.
 
-**Temnospondyls** are large extinct stem-amphibians that first arose in the Carboniferous, which were among the first vertebrates adapted for life on land.  Many early temnospondyls had way more fingers and toes than we’re used to--Acanthostega had eight on each foot!  And it’s just chance that those with five per foot happened to survive the end-Devonian extinction and give rise to the rest of the vertebrates.  The last known temnospondyl, Koolasuchus, survived until the early Cretaceous.  Special shout-out to Prionosuchus, a giant temnospondyl pretending to be a crocodile.
+**Pelycosaurs** (meaning “basin reptile”) are a paraphyletic group of very basal synapsids that lived from the late Carboniferous to the middle Permian.  They included the apex predators of their time, such as the famous *Dimetrodon*, as well as large herbivores such as *Edaphosaurus*.  Many had huge sails on their backs for some still-unclear reason.
 
-**Phytosaurs** are large extinct crurotarsan archosaurs that lived during the Triassic that looked a lot like crocodiles but were not crocodylians.
+**Temnospondyls** are large extinct stem-amphibians that first arose in the Carboniferous, which were among the first vertebrates adapted for life on land.  Many early temnospondyls had way more fingers and toes than we’re used to--*Acanthostega* had eight on each foot!  And it’s just chance that those with five per foot happened to survive the end-Devonian extinction and give rise to the rest of the vertebrates.  The last known temnospondyl, *Koolasuchus*, survived until the early Cretaceous.  Special shout-out to *Prionosuchus*, a giant temnospondyl pretending to be a crocodile.
+
+**Phytosaurs** are large extinct crurotarsan **archosaurs** that lived during the Triassic that looked a lot like crocodiles but were not crocodylians.
 
 **Anamniotes** are the paraphyletic clade of anything that’s not an amniote (reptile or mammal).  This includes non-tetrapod fish and amphibians.
 
@@ -42,21 +44,19 @@ categories: blog post
 
 **Eutherians** (meaning “true beast”) are the group of mammals including placental mammals and their ancestral cousins.  All living mammals that aren’t marsupials or monotremes are placentals.
 
-**Placoderms** (meaning “plate skin”) were a group of armored fish that lived from the Silurian period to the Devonian period.  They had both an internal skeleton AND an exoskeleton, so we have a very good idea of what they looked like from fossils.  The largest one known, Dunkleosteus, was twenty feet long and weighed about a ton, and was the apex predator of its time.  Placoderms didn’t have teeth, instead using the edges of their exoskeletal plates to bite.
+**Placoderms** (meaning “plate skin”) were a group of armored fish that lived from the Silurian period to the Devonian period.  They had both an internal skeleton AND an exoskeleton, so we have a very good idea of what they looked like from fossils.  The largest one known, *Dunkleosteus*, was twenty feet long and weighed about a tonne, and was the apex predator of its time.  Placoderms didn’t have teeth, instead using the edges of their exoskeletal plates to bite.
 
 **Chondrichthyes** (meaning “cartilage fish”) are the group of fish containing sharks, rays, and chimeras.  Their skeletons are made of cartilage rather than bone.  They are not very closely related to other fish, their lineage having split off way back in the Silurian period.
 
 **Osteichthyes** (meaning “bone fish”) are the group of fish containing ray-finned fish and lobe-finned fish (which includes tetrapods, which includes humans).  Their skeletons are made of bone, and they don’t have an exoskeleton.
 
-**Actinopterygii**, also known as ray-finned fish, is the subgroup of Osteichthyes (bony fish) that includes most modern fish.
+**Actinopterygii**, also known as ray-finned fish, is the subgroup of **osteichthyes** (bony fish) that includes most modern fish.
 
-**Sarcopterygii**, also known as lobe-finned fish, is the subgroup of Osteichthyes (bony fish) that includes coelacanths, lungfish, and all tetrapods (including humans).
+**Sarcopterygii**, also known as lobe-finned fish, is the subgroup of **osteichthyes** (bony fish) that includes coelacanths, lungfish, and all tetrapods (including humans).
 
-**Tetrapods** are the group of vertebrates with four limbs, including amphibians, mammals, and reptiles (which includes birds).
+**Eurypterids** (meaning “broad wing”), also known as sea scorpions, are a group of very small to very large carnivorous aquatic arthropods that were very successful throughout most of the Paleozoic Era (from the Ordovician to the Permian).  Some were predators and some were filter-feeders.  The largest known eurypterid, *Jaekelopterus*, is the largest known arthropod ever.  Since eurypterids were so common and were made entirely of hard parts, they fossilized very well and thus their biology is well-understood.
 
-**Eurypterids** (meaning “broad wing”) are a group of very small to very large carnivorous aquatic arthropods that were very successful throughout most of the Paleozoic Era (from the Ordovician to the Permian).  Some were predators and some were filter-feeders.  The largest known eurypterid, Jaekelopterus, is the largest known arthropod ever.  Since eurypterids were so common and were made entirely of hard parts, they fossilized very well and thus their biology is well-understood.
-
-**Pseudosuchians** (meaning “false crocodile”) are the group containing crocodiles and their ancestral cousins.  They used to be incredibly diverse, especially in the Triassic--there were sail-backed, herbivorous crocs; hoofed crocs; “cat” crocs and “cheetah” crocs; fully-aquatic crocs with fins and flippers; tank-like armored, spiky crocs; and many more.
+**Pseudosuchians** (meaning “false crocodile”) are the group containing crocodiles and their ancestral cousins.  They used to be incredibly diverse, especially in the Triassic--there were sail-backed, herbivorous crocs (*Lotosaurus*); hoofed crocs (*Boverisuchus*); “cat” crocs (*Pakasuchus*) and “cheetah” crocs (*Araripesuchus*); fully-aquatic crocs with fins and flippers (*Dakosaurus*); tank-like armored, spiky crocs (*Desmatosuchus*); and many more.
 
 **Pan-aves** (meaning “all birds”) are the group containing pterosaurs and dinosaurs (which contains birds).
 
@@ -71,9 +71,9 @@ A **crown-group** is a monophyletic group of living organisms connected by a com
 
 A **stem-group** is a paraphyletic group of all the extinct organisms that are more closely related to a certain crown-group than to other crown-groups.  For example, all dinosaurs can be called stem-birds; all synapsids can be called stem-mammals; metatherians can be called stem-marsupials, etc.
 
-A **genus** (plural: genera) is the taxonomic ranking below “family” and above species, and is the most common ranking paleontologists work with, even though it's not super well-defined.  The scientific name of an organism’s genus is called its **generic name**, and is the first word in the **binomial nomenclature** system.  For example, in Tyrannosaurus rex, "Tyrannosaurus" is the generic name.
+A **genus** (plural: genera) is the taxonomic ranking below “family” and above species, and is the most common ranking paleontologists work with, even though it's not super well-defined.  The scientific name of an organism’s genus is called its **generic name**, and is the first word in the **binomial nomenclature** system.  For example, in *Tyrannosaurus rex*, "*Tyrannosaurus*" is the generic name.
 
-A **species** is the taxonomic ranking below genus, and is defined as the largest group in which any two individuals of the appropriate sexes can produce fertile offspring.  The scientific name of an organism's species is called its **specific name**, and is the second word in the binomial nomenclature system.  In Tyrannosaurus rex, "rex" is the specific name.
+A **species** is the taxonomic ranking below genus, and is defined as the largest group in which any two individuals of the appropriate sexes can produce fertile offspring.  The scientific name of an organism's species is called its **specific name**, and is the second word in the binomial nomenclature system.  In *Tyrannosaurus rex*, "*rex*" is the specific name.
 
 An **ancestral trait** is a trait that evolved early on in a lineage.  For example, mammals are ancestrally furry--each furry group of mammals descended from an ancestor that was furry, rather than evolving fur independently many times.
 
@@ -87,7 +87,7 @@ An **autapomorphy** is a derived trait that’s unique to one group.  For exampl
 
 A **synapomorphy** is a trait that’s ancestrally unique to one group, but later members of the group may have secondarily lost it.  For example, archosaurs may be ancestrally feathered, but many derived archosaurs such as crocodylians and many dinosaurs were secondarily scaly.
 
-**Homoplasy** is when a trait is gained or lost independently in unrelated groups, often due to convergent evolution.  For example, electric eels and elephantfish both separately came up with a way to produce electricity.
+**Homoplasy** is when a trait is gained or lost independently in unrelated groups, often due to convergent evolution.  For example, electric eels and elephantfish both separately came up with a way to produce electricity.  A trait that is prone to homoplasy is called a **homoplastic trait**.
 
 ### Leg Anatomy
 
@@ -116,34 +116,38 @@ A **plagiopatagium** (“plagio” means “flat”) is a membrane between a fin
 ### Aquatic tail types
 **Hypocercal** tails have a larger bottom lobe and smaller top lobe.  The only living creatures with this are flying fish, but in the past metriorhynchids and mosasaurs both sported this type of tail.
 
-**Heterocercal** tails have a larger top lobe and smaller bottom lobe.  Modern sharks and certain ray-finned fish like sturgeon have this type of tail, as well as placoderms like Dunkleosteus in the past.
+**Heterocercal** tails have a larger top lobe and smaller bottom lobe.  Modern sharks and certain ray-finned fish like sturgeon have this type of tail, as well as placoderms like *Dunkleosteus* in the past.
 
 **Homocercal** tails have top and bottom lobes that are about the same size.  Most ray-finned fish have this type of tail, as well as ichthyosaurs in the past.
 
 ### Swimming styles
-**Anguilliform** swimming is what eels do, where the entire body moves back and forth and large fins aren’t necessary.
+**Anguilliform** swimming is what eels do, in which the entire body moves back and forth and large fins aren’t necessary.  It's not very fast, but maneuverable and allows the fish to fit in tight spaces.
 
 **Carangiform** swimming is what most fish do, where the tail is mostly responsible for propulsion and the rest of the body is held more stiffly.  It’s an intermediate style between anguilliform and thunniform.
 
 **Thunniform** swimming is what the fastest fish do, like tuna, sailfish, and sharks.  The body is very stiff and the tail is very powerful.
 
 ### Specialized behaviors
-**Fossorial** creatures are optimized for digging and burrowing, such as moles, clams, bees, and Oryctodromeus.
+**Fossorial** creatures are optimized for digging and burrowing, such as moles, clams, bees, and *Oryctodromeus*.
 
-**Arboreal** creatures are optimized for life in trees, such as monkeys, geckos, tree snakes, squirrels, and Suminia.
+**Arboreal** creatures are optimized for life in trees, such as monkeys, geckos, tree snakes, squirrels, many birds, and *Suminia*.
 
-**Cursorial** creatures are optimized for running long distances, such as horses, ostriches, wolves, certain spiders, and Moros.
+**Scansorial** creatures are optimized for climbing.  This frequently overlaps with **arboreal**, but some non-arboreal creatures are scansorial, like mountain goats, and some non-scansorial creatures are arboreal, like perching birds.
 
-**Saltatorial** creatures are optimized for hopping, such as kangaroos, jerboas, and Scleromochlus.  This is particularly common among desert-dwelling creatures.
+**Cursorial** creatures are optimized for running long distances, such as horses, ostriches, wolves, certain spiders, and *Moros*.
+
+**Saltatorial** creatures are optimized for hopping, such as kangaroos, jerboas, and *Scleromochlus*.  This is particularly common among desert-dwelling creatures.
 
 ### Integument
 **Integument** is the “covering” of an organism.  In animals, it refers to the skin, scales, fur, feathers, or other features on the outside of an animal.  In plants, it refers to the rind, husk, shell, etc.
 
-**Pycnofibres** are fuzzy hair-like structures found on most pterosaurs.  We now believe that archosaurs may have been ancestrally fluffy, so pycnofibres may be derived from the same trait that feathers are derived from.  Functionally, pycnofibres look a lot like fur.
+**Pycnofibres** are fuzzy hair-like structures found on most pterosaurs.  We now believe that archosaurs may have been ancestrally fluffy, so pycnofibres may be derived from the same feature that feathers are derived from.  Functionally, pycnofibres look a lot like fur.
 
-**Osteoderms** (meaning “bone skin”) are bones that grow in the skin, unattached to the rest of the skeleton, usually used for armor.  They evolved independently in many groups, such as lizards, amphibians, crocodylians, dinosaurs, phytosaurs (extinct non-crocodylian croc-lookalikes), and armadillos.
+**Osteoderms** (meaning “bone skin”) are bones that grow in the skin, unattached to the rest of the skeleton, usually used for armor.  They evolved independently in many groups, such as lizards, amphibians, crocodylians, dinosaurs, phytosaurs, and armadillos.
 
 **Keratin** is a tough protein found in horns, hair, hooves, feathers, claws, and beaks.
+
+**Chitin** is a tough protein found in arthropod shells, claws, and other hard parts.
 
 **Pinnae** are external ear-flaps that are ancestral to mammals.  They also may have independently appeared in some advanced notosuchian crocodyliformes in the Mesozoic.  (Isn't that cool to imagine--crocs with expressive, dog-like ears?)
 
@@ -158,11 +162,11 @@ A **plagiopatagium** (“plagio” means “flat”) is a membrane between a fin
 
 **Anisodactyly** is when three toes point forward and one backward, like a majority of birds.
 
-**Tridactyly** is when three toes point forward and zero backward, like a rhinoceros or Tyrannosaurus.
+**Tridactyly** is when three toes point forward and zero backward, like a rhinoceros or *Tyrannosaurus*.
 
 **Didactyly** is when two toes point forward and zero backward, like a deer or ostrich.
 
-**Monodactyly** is when one toe points forward and zero backward, like a horse or Vespersaurus.
+**Monodactyly** is when one toe points forward and zero backward, like a horse or *Vespersaurus*.
 
 ### Fauna Sizes
 **Microfauna** are tiny creatures usually smaller than 100 microns across (less than the width of a hair) that can only be seen with a microscope.  Examples include tardigrades (water bears), dust mites, copepods (small crustaceans), small nematodes, and rotifers.
@@ -190,7 +194,7 @@ A **plagiopatagium** (“plagio” means “flat”) is a membrane between a fin
 
 **The Cretaceous Terrestrial Revolution** (KTR) was a radiation event in the Late Cretaceous period (125-80 million years ago) in which flowering plants (angiosperms) appeared and quickly took over the world, drastically changing many environments and the animals within them.  Prior to this, there were no grasslands, no true rainforests since the Carboniferous Rainforest Collapse, and few frugivores.  The worldwide domination of angiosperms created these new biomes with new niches for animals to exploit.
 
-**The Great American Biotic Interchange** (GABI) was an event that began around 2.7 million years ago in the Pliocene when South America, which had been an island since the Cretaceous, collided with North America, forming the Isthmus of Panama.  This allowed animals to travel from one continent to the other.  Though animals did move both ways, the North American fauna tended to outcompete the South American.  One famous South American animal that successfully emigrated to North America was Titanis, the last of the terror birds, which ended up as far north as Tennessee.
+**The Great American Biotic Interchange** (GABI) was an event that began around 2.7 million years ago in the Pliocene when South America, which had been an island since the Cretaceous, collided with North America, forming the Isthmus of Panama.  This allowed animals to travel from one continent to the other.  Though animals did move both ways, the North American fauna tended to outcompete the South American.  One famous South American animal that successfully emigrated to North America was *Titanis*, the last of the terror birds, which ended up as far north as Tennessee.
 
 ### Miscellaneous
 **“Splitters”** are paleontologists who habitually like to create more taxonomic groups.  **“Lumpers”** are paleontologists who like to group other groups together and have less groups.
@@ -201,7 +205,7 @@ A **niche** is a general role that an ecosystem makes available for organisms to
 
 **Heterodont dentition** is when an animal has many types of differently-shaped teeth for different purposes.  It's more common in mammals, but is also found in some reptiles.  For example, we humans have molars, premolars, incisors, and canines, while sharks just have a whole bunch of the same type of flat, serrated tooth.
 
-A **junior synonym** happens when a new genus is described based on a new fossil (eg Stygimoloch) but later found to belong to an existing genus (eg Pachycephalosaurus).  This can happen when the new fossil is a juvenile that looks different from the adult form, an elderly individual that looks different from the norm, or when the new fossil is re-analyzed later and is found to be just not different enough to merit its own genus.  The “junior” part of the term comes from the practice that the name that’s published first (the senior synonym) takes precedence.  In 2010, a study tried to lump Torosaurus as fully mature Triceratops; in that case, even though Torosaurus are older individuals than Triceratops, the name “Triceratops” was published first, so it would be the senior synonym while Torosaurus would be the junior synonym.  However, other studies have since refuted this claim.
+A **junior synonym** happens when a new genus is described based on a new fossil (e.g. *Stygimoloch*) but later found to belong to an existing genus (e.g. *Pachycephalosaurus*).  This can happen when the new fossil is a juvenile that looks different from the adult form, an elderly individual that looks different from the norm, or when the new fossil is re-analyzed later and is found to be just not different enough to merit its own genus.  The “junior” part of the term comes from the practice that the name that’s published first (the senior synonym) takes precedence.  In 2010, a study tried to lump *Torosaurus* as fully mature *Triceratops*; in that case, even though *Torosaurus* are older individuals than *Triceratops*, the name “*Triceratops*” was published first, so it would be the senior synonym while *Torosaurus* would be the junior synonym.  However, other studies have since refuted this claim.
 
 **Gastroliths**, also known as gizzard stones, are rocks ingested on purpose by an animal that help grind up food in their stomach, or help decrease buoyancy in aquatic or semiaquatic animals.  Groups known to use gastroliths are herbivorous birds, crocodylians, pinnipeds (seals and sea lions), some amphibians, sauropods, certain theropods, and plesiosaurs.
 
