--- a/_posts/2019-09-24-anzu.markdown
+++ b/_posts/2019-09-24-anzu.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Obscure Dinosaur Profile #1: *Anzu*"
+title:  "Obscure Dinosaur Profile #1: Anzu"
 date:   2019-09-24 01:40:08 -0700
 categories: profile
 ---
